# Video-Tool-MCP

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  OAUTH_IMPLEMENTATION.md  Procfile  README.md  debug_claude_integration.py  deploy.sh  main.py  pyproject.toml  railway.json  requirements.txt  server-info.json  server.py  server_backup.py  server_claude_web.py  server_minimal.py  server_oauth_updated.py  simple_server.py  temp_footer.py  temp_helpers.py  test_mcp_protocol.py  test_security.py  test_server_start.py  verify_deployment.py  video_tools_temp.py
.dev-auth/: public_key.pem  test_token.txt
tests/: test_server.py
